first full update

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,275 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{yen2024processgallery,
+author = {Yen*, Yu-Chun Grace and E*, Jane L. and Jin, Hyoungwook and Li, Mingyi and Lin, Grace and Pan, Isabelle Yan, and Dow, Steven P.},
+title = {ProcessGallery: Contrasting Early and Late Iterations for Design Principle Learning},
+venue = {(To Appear) CSCW},
+year = {2024},
+pdf={papers/yen2024processgallery.pdf},
+selected={true},
+bibtex_show={true}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{xu2024jamplate,
+author = {Xu, Xiaotong (Tone) and Yin, Jiayu, and Gu, Catherine, and Mar, Jenny, and Zhang, Sydney and E, Jane L. and Dow, Steven P.},
+title = {Jamplate: Exploring LLM-Enhanced Templates for Idea Reflection},
+venue = {(To Appear) CSCW},
+year = {2024},
+pdf={papers/xu2024jamplate.pdf},
+selected={true},
+bibtex_show={true}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@inproceedings{beaudouinlafon2023colorfield,
+author = {Beaudouin-Lafon, Matthew T and E, Jane L. and Xia, Haijun},
+title = {Color Field: Developing Professional Vision by Visualizing the Effects of Color Filters},
+booktitle = {Proceedings of the 36th Annual ACM Symposium on User Interface Software and Technology},
+url = {https://doi.org/10.1145/3586183.3606828},
+doi = {10.1145/3586183.3606828},
+venue = {UIST},
+year = {2023},
+pdf = {beaudouinlafon2023colorfield.pdf},
+video = {https://www.youtube.com/watch?v=yMT4CxSqtWg},
+demo = {https://creativity.ucsd.edu/colorfield},
+selected={true},
+bibtex_show={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{e2023machines,
+author = {E, Jane L. and Fang, Cathy Mengying and Bourgault, Sam},
+title = {Machines as Collaborators for Art and Rituals},
+journal = {XRDS},
+url = {https://doi.org/10.1145/3596928},
+doi = {10.1145/3596928},
+venue = {XRDS Magazine},
+year = {2023},
+pdf = {e2023machines.pdf},
+selected = {true},
+bibtex_show={true}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{bourgault2023creativity,
+author = {Bourgault, Sam and E, Jane L.},
+title = {Exploring the Horizon of Computation for Creativity},
+journal = {XRDS},
+url = {https://doi.org/10.1145/3596921},
+doi = {10.1145/3596921},
+venue = {XRDS Magazine},
+year = {2023},
+pdf = {bourgault2023creativity.pdf},
+selected = {true},
+bibtex_show={true}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{cao2023dataparticles,
+author = {Cao, Yining and E, Jane L. and Chen, Zhutian and Xia, Haijun},
+title = {DataParticles: Block-based and Language-oriented Authoring of Animated Unit Visualizations},
+booktitle = {Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems},
+url = {https://doi.org/10.1145/3544548.3581472},
+doi = {10.1145/3544548.3581472},
+venue = {CHI},
+year = {2023},
+pdf = {https://creativity.ucsd.edu/papers/dataparticles.pdf},
+website = {https://rrrima.github.io/dataparticles.html},
+selected = {true},
+bibtex_show={true}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{castro2023comic,
+author = {Castro, Francisco and Suh, Sangho and E, Jane L. and Naowaprateep, Weena and Shi, Yang},
+title = {Developing Comic-based Learning Toolkits for Teaching Computing to Elementary School Learners},
+booktitle = {Proceedings of the 54th ACM Technical Symposium on Computer Science Education V. 2},
+url = {https://doi.org/10.1145/3545947.3576272},
+doi = {10.1145/3545947.3576272},
+venue = {SIGCSE Posters},
+year = {2023},
+pdf = {castro2023comic.pdf},
+poster = {castro2023comic-poster.pdf},
+selected = {true},
+bibtex_show={true}
+}
+
+@phdthesis{e2021thesis,
+author  = "E, Jane L.",
+title   = "Artistic Vision: Providing Contextual Guidance for Capture-Time Decisions",
+school  = "Stanford Unversity",
+year    = "2021",
+dissertation = {https://drive.google.com/file/d/14lKLPZXz84MK53ze1NS23Y21XPdnrk3W/view?usp=sharing},
+defense = {https://www.youtube.com/watch?v=Aqq8ja7Tk2U},
+selected = {true},
+bibtex_show={true}
+}
+
+@inproceedings{e2021declutter,
+author = {E, Jane L. and Zhai, Kevin Y. and Echevarria, Jose and Fried, Ohad and Hanrahan, Pat and Landay, James A.},
+title = {Dynamic Guidance for Decluttering Photographic Compositions},
+booktitle = {Proceedings of the 34th Annual ACM Symposium on User Interface Software and Technology},
+url = {https://doi.org/10.1145/3472749.3474755},
+doi = {10.1145/3472749.3474755},
+venue = {UIST},
+year = {2021},
+pdf = {http://graphics.stanford.edu/projects/declutter/e_declutter_uist21.pdf},
+website = {http://graphics.stanford.edu/projects/declutter/},
+selected = {true},
+bibtex_show={true}
+}
+
+@inbook{e2021designthinking,
+author="E, Jane L. and Landay, James A.",
+editor="Meinel, Christoph
+and Leifer, Larry",
+title="Designing Photography Guidance for Rapid In-Camera Iteration",
+booktitle="Design Thinking Research: Translation, Prototyping, and Measurement",
+publisher="Springer International Publishing",
+isbn="978-3-030-76324-4",
+url="https://doi.org/10.1007/978-3-030-76324-4_8",
+doi="10.1007/978-3-030-76324-4_8",
+year="2021",
+selected = {false},
+bibtex_show={true}
+}
+
+@inproceedings{e2020composition,
+author = {E, Jane L. and Fried, Ohad and Lu, Jingwan and Zhang, Jianming and M\v{e}ch, Radom\'{\i}r and Echevarria, Jose and Hanrahan, Pat and Landay, James A.},
+title = {Adaptive Photographic Composition Guidance},
+booktitle = {Proceedings of the 2020 CHI Conference on Human Factors in Computing Systems},
+url = {https://doi.org/10.1145/3313831.3376635},
+doi = {10.1145/3313831.3376635},
+venue = {CHI},
+year = {2020},
+pdf = {http://graphics.stanford.edu/projects/adaptivearmatures/e_armature_chi20.pdf},
+website = {http://graphics.stanford.edu/projects/adaptivearmatures/},
+selected = {true},
+bibtex_show={true}
+}
+
+@inproceedings{e2019portrait,
+author = {E, Jane L. and Fried, Ohad and Agrawala, Maneesh},
+title = {Optimizing Portrait Lighting at Capture-Time Using a 360 Camera as a Light Probe},
+booktitle = {Proceedings of the 32nd Annual ACM Symposium on User Interface Software and Technology},
+url = {https://doi.org/10.1145/3332165.3347893},
+doi = {10.1145/3332165.3347893},
+venue = {UIST},
+year = {2019},
+pdf = {http://graphics.stanford.edu/projects/portraitlighting/e_portrait_uist19.pdf},
+website = {http://graphics.stanford.edu/projects/portraitlighting/},
+selected = {true},
+bibtex_show={true}
+}
+
+@inproceedings{mott2018motor,
+author = {Mott, Martez E. and E, Jane L. and Bennett, Cynthia L. and Cutrell, Edward and Morris, Meredith Ringel},
+title = {Understanding the Accessibility of Smartphone Photography for People with Motor Impairments},
+booktitle = {Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems},
+url = {https://doi.org/10.1145/3173574.3174094},
+doi = {10.1145/3173574.3174094},
+venue = {CHI},
+year = {2018},
+pdf = {https://cs.stanford.edu/~merrie/papers/chi2018_motor_photo.pdf},
+short = {https://www.youtube.com/watch?v=Yab32_td5Yk},
+selected = {true},
+bibtex_show={true}
+}
+
+@inproceedings{bennett2018visual,
+author = {Bennett, Cynthia L. and E, Jane L. and Mott, Martez E. and Cutrell, Edward and Morris, Meredith Ringel},
+title = {How Teens with Visual Impairments Take, Edit, and Share Photos on Social Media},
+booktitle = {Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems},
+url = {https://doi.org/10.1145/3173574.3173650},
+doi = {10.1145/3173574.3173650},
+venue = {CHI},
+year = {2018},
+pdf = {https://cs.stanford.edu/~merrie/papers/chi2018_bvi_photos.pdf},
+talk = {https://www.youtube.com/watch?v=1fZ4KG6Ma7E},
+selected = {true},
+bibtex_show={true}
+}
+
+@article{abtahi2017drone,
+author = {Abtahi, Parastoo and Zhao, David Y. and E, Jane L. and Landay, James A.},
+title = {Drone Near Me: Exploring Touch-Based Human-Drone Interaction},
+journal = {Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies},
+url = {https://doi.org/10.1145/3130899},
+doi = {10.1145/3130899},
+venue = {IMWUT / UbiComp},
+year = {2017},
+pdf = {https://hci.stanford.edu/publications/2017/dronenearme/drone_near_me.pdf},
+video = {https://www.youtube.com/watch?v=o3rBuA_te3E},
+selected = {true},
+bibtex_show={true}
+}
+
+@inproceedings{dietz2017swarm,
+author = {Dietz, Griffin and E, Jane L. and Washington, Peter and Kim, Lawrence H. and Follmer, Sean},
+title = {Human Perception of Swarm Robot Motion},
+booktitle = {Proceedings of the 2017 CHI Conference Extended Abstracts on Human Factors in Computing Systems},
+url = {https://doi.org/10.1145/3027063.3053220},
+doi = {10.1145/3027063.3053220},
+venue = {CHI EA},
+year = {2017},
+pdf = {https://cs.stanford.edu/people/ejane/assets/papers/chi2017_swarm_robot_motion.pdf},
+poster = {https://cs.stanford.edu/people/ejane/assets/posters/chi2017_swarm_robot_motion_poster.pdf},
+short = {https://www.youtube.com/watch?v=TUxNRvqRltk},
+selected = {true},
+bibtex_show={true}
+}
+
+@inproceedings{e2017drone,
+author = {E, Jane L. and E, Ilene L. and Landay, James A. and Cauchard, Jessica R.},
+title = {Drone \& Wo: Cultural Influences on Human-Drone Interaction Techniques},
+booktitle = {Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems},
+url = {https://doi.org/10.1145/3025453.3025755},
+doi = {10.1145/3025453.3025755},
+venue = {CHI},
+year = {2017},
+pdf = {https://cs.stanford.edu/people/ejane/assets/papers/chi2017_drone_and_wo.pdf},
+video = {https://www.youtube.com/watch?v=zhZwkTbmulk},
+short = {https://www.youtube.com/watch?v=_qA6GlU5dB4},
+talk = {https://www.youtube.com/watch?v=GCAOHm7hg3k},
+selected = {true},
+bibtex_show={true}
+}
+
+@article{joubert2016drone,
+author={Joubert*, Niels and E*, Jane L. and Goldman, Dan B and Berthouzoz, Floraine and Roberts, Mike and Landay, James A. and Hanrahan, Pat},
+title={Towards a Drone Cinematographer: Guiding Quadrotor Cameras using Visual Composition Principles}, 
+journal = {arXiv preprint arXiv:1610.01691 [cs.GR]},
+url = {https://doi.org/10.48550/arXiv.1610.01691},
+doi = {10.48550/arXiv.1610.01691},
+venue={arXiv},
+year={2016},
+pdf = {https://arxiv.org/pdf/1610.01691v1.pdf},
+video = {https://www.youtube.com/watch?v=tIJ_lLpFbjc},
+website = {https://stanford-gfx.github.io/TowardsADroneCinematographer/},
+selected = {true},
+bibtex_show={true}
+}
+
+@inproceedings{cauchard2015drone,
+author = {Cauchard, Jessica R. and E, Jane L. and Zhai, Kevin Y. and Landay, James A.},
+title = {Drone \& Me: An Exploration into Natural Human-Drone Interaction},
+booktitle = {Proceedings of the 2015 ACM International Joint Conference on Pervasive and Ubiquitous Computing},
+url = {https://doi.org/10.1145/2750858.2805823},
+doi = {10.1145/2750858.2805823},
+venue={UbiComp},
+year = {2015},
+pdf = {https://cs.stanford.edu/people/ejane/assets/papers/ubicomp2015_drone_and_me.pdf},
+video = {https://www.youtube.com/watch?v=vrWF3t7a_HU},
+selected = {true},
+bibtex_show={true}
+}
+
+@inproceedings{cong2015face,
+author = {Cong, Matthew and Bao, Michael and E, Jane L. and Bhat, Kiran S. and Fedkiw, Ronald},
+title = {Fully Automatic Generation of Anatomical Face Simulation Models},
+booktitle = {Proceedings of the 14th ACM SIGGRAPH / Eurographics Symposium on Computer Animation},
+url = {https://doi.org/10.1145/2786784.2786786},
+doi = {10.1145/2786784.2786786},
+venue = {SCA},
+year = {2015},
+pdf = {http://physbam.stanford.edu/~mdcong/pdf/automatic_face_models.pdf},
+video = {http://physbam.stanford.edu/~mdcong/movies/automatic_face_models.mp4},
+selected = {true},
+bibtex_show={true}
 }
