fix some pdfs and formatting

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,7 @@ url = {https://doi.org/10.1145/3586183.3606828},
 doi = {10.1145/3586183.3606828},
 venue = {UIST},
 year = {2023},
-pdf = {beaudouinlafon2023colorfield.pdf},
+pdf = {papers/beaudouinlafon2023colorfield.pdf},
 video = {https://www.youtube.com/watch?v=yMT4CxSqtWg},
 demo = {https://creativity.ucsd.edu/colorfield},
 selected={true},
@@ -44,7 +44,7 @@ url = {https://doi.org/10.1145/3596928},
 doi = {10.1145/3596928},
 venue = {XRDS Magazine},
 year = {2023},
-pdf = {e2023machines.pdf},
+pdf = {papers/e2023machines.pdf},
 selected = {true},
 bibtex_show={true}
 }
@@ -57,7 +57,7 @@ url = {https://doi.org/10.1145/3596921},
 doi = {10.1145/3596921},
 venue = {XRDS Magazine},
 year = {2023},
-pdf = {bourgault2023creativity.pdf},
+pdf = {papers/bourgault2023creativity.pdf},
 selected = {true},
 bibtex_show={true}
 }
@@ -84,7 +84,7 @@ url = {https://doi.org/10.1145/3545947.3576272},
 doi = {10.1145/3545947.3576272},
 venue = {SIGCSE Posters},
 year = {2023},
-pdf = {castro2023comic.pdf},
+pdf = {papers/castro2023comic.pdf},
 poster = {castro2023comic-poster.pdf},
 selected = {true},
 bibtex_show={true}
@@ -166,7 +166,7 @@ url = {https://doi.org/10.1145/3173574.3174094},
 doi = {10.1145/3173574.3174094},
 venue = {CHI},
 year = {2018},
-pdf = {https://cs.stanford.edu/~merrie/papers/chi2018_motor_photo.pdf},
+pdf = {https://cs.stanford.edu/people/merrie/papers/chi2018_motor_photo.pdf},
 short = {https://www.youtube.com/watch?v=Yab32_td5Yk},
 selected = {true},
 bibtex_show={true}
@@ -180,7 +180,7 @@ url = {https://doi.org/10.1145/3173574.3173650},
 doi = {10.1145/3173574.3173650},
 venue = {CHI},
 year = {2018},
-pdf = {https://cs.stanford.edu/~merrie/papers/chi2018_bvi_photos.pdf},
+pdf = {https://cs.stanford.edu/people/merrie/papers/chi2018_bvi_photos.pdf},
 talk = {https://www.youtube.com/watch?v=1fZ4KG6Ma7E},
 selected = {true},
 bibtex_show={true}
