change video buttons, add target=_blank

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@ author = {Yen*, Yu-Chun Grace and E*, Jane L. and Jin, Hyoungwook and Li, Mingyi
 title = {ProcessGallery: Contrasting Early and Late Iterations for Design Principle Learning},
 venue = {(To Appear) CSCW},
 year = {2024},
-pdf={papers/yen2024processgallery.pdf},
+preprint={papers/yen2024processgallery_preprint.pdf},
 selected={true},
 bibtex_show={true}
 }
@@ -16,7 +16,7 @@ author = {Xu, Xiaotong (Tone) and Yin, Jiayu, and Gu, Catherine, and Mar, Jenny,
 title = {Jamplate: Exploring LLM-Enhanced Templates for Idea Reflection},
 venue = {(To Appear) CSCW},
 year = {2024},
-pdf={papers/xu2024jamplate.pdf},
+preprint={papers/xu2024jamplate_preprint.pdf},
 selected={true},
 bibtex_show={true}
 }
