--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -72,6 +72,7 @@ venue = {CHI},
 year = {2023},
 pdf = {https://creativity.ucsd.edu/papers/dataparticles.pdf},
 website = {https://rrrima.github.io/dataparticles.html},
+bestpaper = {true},
 selected = {true},
 bibtex_show={true}
 }
