fix iui bibtex venue

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@ bibtex_show={true}
 @inproceedings{xu2024jamplate,
 author = {Xu, Xiaotong (Tone) and Yin, Jiayu, and Gu, Catherine, and Mar, Jenny, and Zhang, Sydney and E, Jane L. and Dow, Steven P.},
 title = {Jamplate: Exploring LLM-Enhanced Templates for Idea Reflection},
-venue = {(To Appear) CSCW},
+venue = {(To Appear) IUI},
 year = {2024},
 preprint={papers/xu2024jamplate_preprint.pdf},
 selected={true},
