add feedback timing

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,16 @@
 ---
 ---
 
+@inproceedings{e2024feedback,
+author = {E*, Jane L. and Yen*, Yu-Chun Grace and Pan, Isabelle Yan and Lin, Grace and Li, Mingyi and Jin, Hyoungwook and Chen, Mengyi and Xia, Haijun and Dow, Steven P.},
+title = {When to Give Feedback: Exploring Tradeoffs in the Timing of Design Feedback},
+venue = {(To Appear) Creativity & Cognition},
+year = {2024},
+selected={true}
+}
+
 @inproceedings{yen2024processgallery,
-author = {Yen*, Yu-Chun Grace and E*, Jane L. and Jin, Hyoungwook and Li, Mingyi and Lin, Grace and Pan, Isabelle Yan, and Dow, Steven P.},
+author = {Yen*, Yu-Chun Grace and E*, Jane L. and Jin, Hyoungwook and Li, Mingyi and Lin, Grace and Pan, Isabelle Yan and Dow, Steven P.},
 title = {ProcessGallery: Contrasting Early and Late Iterations for Design Principle Learning},
 venue = {(To Appear) CSCW},
 year = {2024},
@@ -14,9 +22,11 @@ bibtex_show={true}
 @inproceedings{xu2024jamplate,
 author = {Xu, Xiaotong (Tone) and Yin, Jiayu, and Gu, Catherine, and Mar, Jenny, and Zhang, Sydney and E, Jane L. and Dow, Steven P.},
 title = {Jamplate: Exploring LLM-Enhanced Templates for Idea Reflection},
-venue = {(To Appear) IUI},
+url = {https://doi.org/10.1145/3640543.3645196},
+doi = {10.1145/3640543.3645196},
+venue = {IUI},
 year = {2024},
-preprint={papers/xu2024jamplate_preprint.pdf},
+pdf = {https://acsweb.ucsd.edu/&#126;xix138/project/jamplate.pdf},
 selected={true},
 bibtex_show={true}
 }
@@ -98,8 +108,7 @@ school  = "Stanford Unversity",
 year    = "2021",
 dissertation = {https://drive.google.com/file/d/14lKLPZXz84MK53ze1NS23Y21XPdnrk3W/view?usp=sharing},
 defense = {https://www.youtube.com/watch?v=Aqq8ja7Tk2U},
-selected = {true},
-bibtex_show={true}
+selected = {true}
 }
 
 @inproceedings{e2021declutter,
