--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,15 +6,18 @@ author = {E*, Jane L. and Yen*, Yu-Chun Grace and Pan, Isabelle Yan and Lin, Gra
 title = {When to Give Feedback: Exploring Tradeoffs in the Timing of Design Feedback},
 venue = {(To Appear) Creativity & Cognition},
 year = {2024},
+preprint={papers/e2024timing_preprint.pdf},
 selected={true}
 }
 
 @inproceedings{yen2024processgallery,
 author = {Yen*, Yu-Chun Grace and E*, Jane L. and Jin, Hyoungwook and Li, Mingyi and Lin, Grace and Pan, Isabelle Yan and Dow, Steven P.},
 title = {ProcessGallery: Contrasting Early and Late Iterations for Design Principle Learning},
-venue = {(To Appear) CSCW},
+url = {https://doi.org/10.1145/3637389},
+doi = {10.1145/3637389},
+venue = {CSCW},
 year = {2024},
-preprint={papers/yen2024processgallery_preprint.pdf},
+pdf={papers/yen2024processgallery.pdf},
 selected={true},
 bibtex_show={true}
 }
