link project page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@ title = {When to Give Feedback: Exploring Tradeoffs in the Timing of Design Feed
 venue = {(To Appear) Creativity & Cognition},
 year = {2024},
 preprint={papers/e2024timing_preprint.pdf},
+website={https://ejane.me/inactionfeedback.html},
 selected={true}
 }
 
