--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,16 +4,22 @@
 @inproceedings{e2024feedback,
 author = {E*, Jane L. and Yen*, Yu-Chun Grace and Pan, Isabelle Yan and Lin, Grace and Li, Mingyi and Jin, Hyoungwook and Chen, Mengyi and Xia, Haijun and Dow, Steven P.},
 title = {When to Give Feedback: Exploring Tradeoffs in the Timing of Design Feedback},
-venue = {(To Appear) Creativity & Cognition},
+booktitle = {Proceedings of the 16th Annual ACM Conference on Creativity and Cognition},
+url = {https://doi.org/10.1145/3635636.3656183},
+doi = {10.1145/3635636.3656183},
+venue = {Creativity & Cognition},
 year = {2024},
 preprint={papers/e2024timing_preprint.pdf},
+video = {https://youtu.be/TzlrcbVO2Qg},
 website={https://ejane.me/inactionfeedback.html},
-selected={true}
+selected={true},
+bibtex_show={true}
 }
 
 @inproceedings{yen2024processgallery,
 author = {Yen*, Yu-Chun Grace and E*, Jane L. and Jin, Hyoungwook and Li, Mingyi and Lin, Grace and Pan, Isabelle Yan and Dow, Steven P.},
 title = {ProcessGallery: Contrasting Early and Late Iterations for Design Principle Learning},
+journal = {Proceedings of the ACM on Human-Computer Interaction},
 url = {https://doi.org/10.1145/3637389},
 doi = {10.1145/3637389},
 venue = {CSCW},
@@ -26,6 +32,7 @@ bibtex_show={true}
 @inproceedings{xu2024jamplate,
 author = {Xu, Xiaotong (Tone) and Yin, Jiayu, and Gu, Catherine, and Mar, Jenny, and Zhang, Sydney and E, Jane L. and Dow, Steven P.},
 title = {Jamplate: Exploring LLM-Enhanced Templates for Idea Reflection},
+booktitle = {Proceedings of the 29th International Conference on Intelligent User Interfaces},
 url = {https://doi.org/10.1145/3640543.3645196},
 doi = {10.1145/3640543.3645196},
 venue = {IUI},
@@ -85,6 +92,7 @@ doi = {10.1145/3544548.3581472},
 venue = {CHI},
 year = {2023},
 pdf = {https://creativity.ucsd.edu/papers/dataparticles.pdf},
+video = {https://www.youtube.com/watch?v=HXTn_OHXZZA},
 website = {https://rrrima.github.io/dataparticles.html},
 bestpaper = {true},
 selected = {true},
@@ -124,6 +132,7 @@ doi = {10.1145/3472749.3474755},
 venue = {UIST},
 year = {2021},
 pdf = {http://graphics.stanford.edu/projects/declutter/e_declutter_uist21.pdf},
+video = {https://www.youtube.com/watch?v=33Z8kJbZeX4},
 website = {http://graphics.stanford.edu/projects/declutter/},
 selected = {true},
 bibtex_show={true}
@@ -153,6 +162,7 @@ doi = {10.1145/3313831.3376635},
 venue = {CHI},
 year = {2020},
 pdf = {http://graphics.stanford.edu/projects/adaptivearmatures/e_armature_chi20.pdf},
+video = {https://www.youtube.com/watch?v=bimtzHrXDog},
 website = {http://graphics.stanford.edu/projects/adaptivearmatures/},
 selected = {true},
 bibtex_show={true}
@@ -167,6 +177,7 @@ doi = {10.1145/3332165.3347893},
 venue = {UIST},
 year = {2019},
 pdf = {http://graphics.stanford.edu/projects/portraitlighting/e_portrait_uist19.pdf},
+video = {https://www.youtube.com/watch?v=DjQCqmr023k},
 website = {http://graphics.stanford.edu/projects/portraitlighting/},
 selected = {true},
 bibtex_show={true}
