update inaction feedback paper to non-preprint

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@ url = {https://doi.org/10.1145/3635636.3656183},
 doi = {10.1145/3635636.3656183},
 venue = {Creativity & Cognition},
 year = {2024},
-preprint={papers/e2024timing_preprint.pdf},
+pdf={papers/e2024timing.pdf},
 video = {https://youtu.be/TzlrcbVO2Qg},
 website={https://ejane.me/inactionfeedback.html},
 selected={true},
