fix broken stanford paper links

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -120,6 +120,8 @@ school  = "Stanford Unversity",
 year    = "2021",
 dissertation = {https://drive.google.com/file/d/14lKLPZXz84MK53ze1NS23Y21XPdnrk3W/view?usp=sharing},
 defense = {https://www.youtube.com/watch?v=Aqq8ja7Tk2U},
+ds = {papers/uist2018_ds.pdf},
+gss = {papers/cc2019_gss.pdf},
 selected = {true}
 }
 
@@ -233,8 +235,8 @@ url = {https://doi.org/10.1145/3027063.3053220},
 doi = {10.1145/3027063.3053220},
 venue = {CHI EA},
 year = {2017},
-pdf = {https://cs.stanford.edu/people/ejane/assets/papers/chi2017_swarm_robot_motion.pdf},
-poster = {https://cs.stanford.edu/people/ejane/assets/posters/chi2017_swarm_robot_motion_poster.pdf},
+pdf = {papers/chi2017_swarm_robot_motion.pdf},
+poster = {posters/chi2017_swarm_robot_motion_poster.pdf},
 short = {https://www.youtube.com/watch?v=TUxNRvqRltk},
 selected = {true},
 bibtex_show={true}
@@ -248,7 +250,7 @@ url = {https://doi.org/10.1145/3025453.3025755},
 doi = {10.1145/3025453.3025755},
 venue = {CHI},
 year = {2017},
-pdf = {https://cs.stanford.edu/people/ejane/assets/papers/chi2017_drone_and_wo.pdf},
+pdf = {papers/chi2017_drone_and_wo.pdf},
 video = {https://www.youtube.com/watch?v=zhZwkTbmulk},
 short = {https://www.youtube.com/watch?v=_qA6GlU5dB4},
 talk = {https://www.youtube.com/watch?v=GCAOHm7hg3k},
@@ -279,7 +281,7 @@ url = {https://doi.org/10.1145/2750858.2805823},
 doi = {10.1145/2750858.2805823},
 venue={UbiComp},
 year = {2015},
-pdf = {https://cs.stanford.edu/people/ejane/assets/papers/ubicomp2015_drone_and_me.pdf},
+pdf = {papers/ubicomp2015_drone_and_me.pdf},
 video = {https://www.youtube.com/watch?v=vrWF3t7a_HU},
 selected = {true},
 bibtex_show={true}
@@ -293,8 +295,8 @@ url = {https://doi.org/10.1145/2786784.2786786},
 doi = {10.1145/2786784.2786786},
 venue = {SCA},
 year = {2015},
-pdf = {http://physbam.stanford.edu/~mdcong/pdf/automatic_face_models.pdf},
-video = {http://physbam.stanford.edu/~mdcong/movies/automatic_face_models.mp4},
+pdf = {http://physbam.stanford.edu/mdcong/pdf/automatic_face_models.pdf},
+video = {http://physbam.stanford.edu/&#126;mdcong/movies/automatic_face_models.mp4},
 selected = {true},
 bibtex_show={true}
 }
