update paper link

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -37,7 +37,7 @@ url = {https://doi.org/10.1145/3640543.3645196},
 doi = {10.1145/3640543.3645196},
 venue = {IUI},
 year = {2024},
-pdf = {https://acsweb.ucsd.edu/&#126;xix138/project/jamplate.pdf},
+pdf = {https://tonexu.github.io/assets/pdf/jamplate.pdf},
 selected={true},
 bibtex_show={true}
 }
