--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -108,7 +108,7 @@ doi = {10.1145/3545947.3576272},
 venue = {SIGCSE Posters},
 year = {2023},
 pdf = {papers/castro2023comic.pdf},
-poster = {castro2023comic-poster.pdf},
+poster = {posters/castro2023comic-poster.pdf},
 selected = {true},
 bibtex_show={true}
 }
@@ -118,10 +118,11 @@ author  = "E, Jane L.",
 title   = "Artistic Vision: Providing Contextual Guidance for Capture-Time Decisions",
 school  = "Stanford Unversity",
 year    = "2021",
-dissertation = {https://drive.google.com/file/d/14lKLPZXz84MK53ze1NS23Y21XPdnrk3W/view?usp=sharing},
+dissertation = {papers/e2021thesis.pdf},
 defense = {https://www.youtube.com/watch?v=Aqq8ja7Tk2U},
 ds = {papers/uist2018_ds.pdf},
 gss = {papers/cc2019_gss.pdf},
+poster = {posters/e2022risingstars-poster.pdf}
 selected = {true}
 }
 
@@ -236,7 +237,7 @@ doi = {10.1145/3027063.3053220},
 venue = {CHI EA},
 year = {2017},
 pdf = {papers/chi2017_swarm_robot_motion.pdf},
-poster = {posters/chi2017_swarm_robot_motion_poster.pdf},
+poster = {posters/chi2017_swarm_robot_motion-posterpdf},
 short = {https://www.youtube.com/watch?v=TUxNRvqRltk},
 selected = {true},
 bibtex_show={true}
