--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@ venue = {CSCW},
 year = {2024},
 pdf={papers/yen2024processgallery.pdf},
 selected={true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{e2024feedback,
@@ -26,7 +26,7 @@ pdf={papers/e2024timing.pdf},
 video = {https://youtu.be/TzlrcbVO2Qg},
 website={https://ejane.me/inactionfeedback.html},
 selected={true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{xu2024jamplate,
@@ -39,7 +39,7 @@ venue = {IUI},
 year = {2024},
 pdf = {https://tonexu.github.io/assets/pdf/jamplate.pdf},
 selected={true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{beaudouinlafon2023colorfield,
@@ -54,7 +54,7 @@ pdf = {papers/beaudouinlafon2023colorfield.pdf},
 video = {https://www.youtube.com/watch?v=yMT4CxSqtWg},
 demo = {https://creativity.ucsd.edu/colorfield},
 selected={true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @article{e2023machines,
@@ -67,7 +67,7 @@ venue = {XRDS Magazine},
 year = {2023},
 pdf = {papers/e2023machines.pdf},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @article{bourgault2023creativity,
@@ -80,7 +80,7 @@ venue = {XRDS Magazine},
 year = {2023},
 pdf = {papers/bourgault2023creativity.pdf},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{cao2023dataparticles,
@@ -96,7 +96,7 @@ video = {https://www.youtube.com/watch?v=HXTn_OHXZZA},
 website = {https://rrrima.github.io/dataparticles.html},
 bestpaper = {true},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{castro2023comic,
@@ -110,19 +110,19 @@ year = {2023},
 pdf = {papers/castro2023comic.pdf},
 poster = {posters/castro2023comic-poster.pdf},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @phdthesis{e2021thesis,
-author  = "E, Jane L.",
-title   = "Artistic Vision: Providing Contextual Guidance for Capture-Time Decisions",
-school  = "Stanford Unversity",
-year    = "2021",
+author  = {E, Jane L.},
+title   = {Artistic Vision: Providing Contextual Guidance for Capture-Time Decisions},
+school  = {Stanford Unversity},
+year    = {2021},
 dissertation = {papers/e2021thesis.pdf},
 defense = {https://www.youtube.com/watch?v=Aqq8ja7Tk2U},
 ds = {papers/uist2018_ds.pdf},
 gss = {papers/cc2019_gss.pdf},
-poster = {posters/e2022risingstars-poster.pdf}
+poster = {posters/e2022risingstars-poster.pdf},
 selected = {true}
 }
 
@@ -138,22 +138,22 @@ pdf = {http://graphics.stanford.edu/projects/declutter/e_declutter_uist21.pdf},
 video = {https://www.youtube.com/watch?v=33Z8kJbZeX4},
 website = {http://graphics.stanford.edu/projects/declutter/},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inbook{e2021designthinking,
-author="E, Jane L. and Landay, James A.",
-editor="Meinel, Christoph
-and Leifer, Larry",
-title="Designing Photography Guidance for Rapid In-Camera Iteration",
-booktitle="Design Thinking Research: Translation, Prototyping, and Measurement",
-publisher="Springer International Publishing",
-isbn="978-3-030-76324-4",
-url="https://doi.org/10.1007/978-3-030-76324-4_8",
-doi="10.1007/978-3-030-76324-4_8",
-year="2021",
+author = {E, Jane L. and Landay, James A.},
+editor = {Meinel, Christoph
+and Leifer, Larry},
+title = {Designing Photography Guidance for Rapid In-Camera Iteration},
+booktitle = {Design Thinking Research: Translation, Prototyping, and Measurement},
+publisher = {Springer International Publishing},
+isbn = {978-3-030-76324-4},
+url = {https://doi.org/10.1007/978-3-030-76324-4_8},
+doi = {10.1007/978-3-030-76324-4_8},
+year = {2021},
 selected = {false},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{e2020composition,
@@ -168,7 +168,7 @@ pdf = {http://graphics.stanford.edu/projects/adaptivearmatures/e_armature_chi20.
 video = {https://www.youtube.com/watch?v=bimtzHrXDog},
 website = {http://graphics.stanford.edu/projects/adaptivearmatures/},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{e2019portrait,
@@ -183,7 +183,7 @@ pdf = {http://graphics.stanford.edu/projects/portraitlighting/e_portrait_uist19.
 video = {https://www.youtube.com/watch?v=DjQCqmr023k},
 website = {http://graphics.stanford.edu/projects/portraitlighting/},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{mott2018motor,
@@ -197,7 +197,7 @@ year = {2018},
 pdf = {https://cs.stanford.edu/people/merrie/papers/chi2018_motor_photo.pdf},
 short = {https://www.youtube.com/watch?v=Yab32_td5Yk},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{bennett2018visual,
@@ -211,7 +211,7 @@ year = {2018},
 pdf = {https://cs.stanford.edu/people/merrie/papers/chi2018_bvi_photos.pdf},
 talk = {https://www.youtube.com/watch?v=1fZ4KG6Ma7E},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @article{abtahi2017drone,
@@ -225,7 +225,7 @@ year = {2017},
 pdf = {https://hci.stanford.edu/publications/2017/dronenearme/drone_near_me.pdf},
 video = {https://www.youtube.com/watch?v=o3rBuA_te3E},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{dietz2017swarm,
@@ -240,7 +240,7 @@ pdf = {papers/chi2017_swarm_robot_motion.pdf},
 poster = {posters/chi2017_swarm_robot_motion-posterpdf},
 short = {https://www.youtube.com/watch?v=TUxNRvqRltk},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{e2017drone,
@@ -256,7 +256,7 @@ video = {https://www.youtube.com/watch?v=zhZwkTbmulk},
 short = {https://www.youtube.com/watch?v=_qA6GlU5dB4},
 talk = {https://www.youtube.com/watch?v=GCAOHm7hg3k},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @article{joubert2016drone,
@@ -265,13 +265,13 @@ title={Towards a Drone Cinematographer: Guiding Quadrotor Cameras using Visual C
 journal = {arXiv preprint arXiv:1610.01691 [cs.GR]},
 url = {https://doi.org/10.48550/arXiv.1610.01691},
 doi = {10.48550/arXiv.1610.01691},
-venue={arXiv},
-year={2016},
+venue = {arXiv},
+year = {2016},
 pdf = {https://arxiv.org/pdf/1610.01691v1.pdf},
 video = {https://www.youtube.com/watch?v=tIJ_lLpFbjc},
 website = {https://stanford-gfx.github.io/TowardsADroneCinematographer/},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{cauchard2015drone,
@@ -280,12 +280,12 @@ title = {Drone \& Me: An Exploration into Natural Human-Drone Interaction},
 booktitle = {Proceedings of the 2015 ACM International Joint Conference on Pervasive and Ubiquitous Computing},
 url = {https://doi.org/10.1145/2750858.2805823},
 doi = {10.1145/2750858.2805823},
-venue={UbiComp},
+venue = {UbiComp},
 year = {2015},
 pdf = {papers/ubicomp2015_drone_and_me.pdf},
 video = {https://www.youtube.com/watch?v=vrWF3t7a_HU},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
 
 @inproceedings{cong2015face,
@@ -299,5 +299,5 @@ year = {2015},
 pdf = {http://physbam.stanford.edu/mdcong/pdf/automatic_face_models.pdf},
 video = {http://physbam.stanford.edu/&#126;mdcong/movies/automatic_face_models.mp4},
 selected = {true},
-bibtex_show={true}
+bibtex_show = {true}
 }
