add cogsci poster and assets paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@inproceedings{brody2025expanding-preprint,
+author = {Brody, Miriam and Izabella Rodrigues and E, Jane L. and Li, Jingyi},
+title = {Expanding Norms, Negotiating Bodies: How Artists with Disabilities Perceive and Use Creative Tools},
+venue = {ASSETS},
+year = {2025},
+pdf={papers/brody2025expanding-preprint.pdf},
+selected={true},
+bibtex_show = {true}
+}
+
 @inproceedings{yen2024processgallery,
 author = {Yen*, Yu-Chun Grace and E*, Jane L. and Jin, Hyoungwook and Li, Mingyi and Lin, Grace and Pan, Isabelle Yan and Dow, Steven P.},
 title = {ProcessGallery: Contrasting Early and Late Iterations for Design Principle Learning},
