--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -126,7 +126,7 @@ bibtex_show = {true}
 @phdthesis{e2021thesis,
 author  = {E, Jane L.},
 title   = {Artistic Vision: Providing Contextual Guidance for Capture-Time Decisions},
-school  = {Stanford Unversity},
+school  = {Stanford University},
 year    = {2021},
 dissertation = {papers/e2021thesis.pdf},
 defense = {https://www.youtube.com/watch?v=Aqq8ja7Tk2U},
